# FuzzX

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  README.md
amdgpu/fuzzers/llvm-amdgpu-diff/: CMakeLists.txt  llvm_amdgpu_diff_fuzzer.cpp
crates/fuzzx-diff/: Cargo.toml
crates/fuzzx-diff/src/: main.rs
crates/ptx-fuzz-diff/: Cargo.toml
crates/ptx-fuzz-diff/src/: main.rs
crates/ptx-fuzz-mutator/: Cargo.toml
crates/ptx-fuzz-mutator/src/: lib.rs
ptx/: AGENTS.md  Cargo.toml  DESIGN.md  README.md
ptx/crates/fuzzx-execgen/: Cargo.toml
ptx/docs/: ptx-isa-fuzzing-backlog.md
ptx/known-miscompiles/: README.md
ptx/known-miscompiles/m001-seed-050f/: summary.txt
ptx/known-miscompiles/m002-structured-lop3/: NOTES.md
ptx/known-miscompiles/m003-no-lop3-max-chain/: NOTES.md  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m004-mulhi-loop-tripcount/: reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m005-prmt-ifconvert-mask/: repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m006-ifconvert-not-xor/: reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m007-signed-unsigned-ifconvert/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m009-neg-loop-after-counted-loop/: reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m010-shr-s32-range-fold/: NOTES.md  reduced.ptx
ptx/known-miscompiles/m011-bfind-after-empty-loop/: NOTES.md  reduced.ptx
ptx/known-miscompiles/m012-empty-loop-intmax-sub/: NOTES.md  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m013-set-true-cmp-one/: reduced.ptx
ptx/known-miscompiles/m014-vsub4-divergent-branch/: NOTES.md  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m015-abs-loop-bmsk-fold/: NOTES.md  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m016-slct-s32-immediate-fold/: repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m017-addc-shift-carry-fold/: repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m018-subc-cnot-shift-borrow-fold/: reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m019-structured-loop-uniform-counter/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m020-mixed-minmax-signedness-fold/: repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m021-cnot-funnel-add/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m022-neg-funnel-left-add/: NOTES.md  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m023-mul-wide-hi-ice/: NOTES.md  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m024-prmt-cvt-u16-fold/: repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m025-shl-xor-square-lowbits/: reduced.ptx
ptx/known-miscompiles/m027-subc-shr-mul-borrow-fold/: reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m028-shf-r-wrap-sub-fold/: reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m030-not-clz-predicate-fold/: reduced.ptx
ptx/known-miscompiles/m031-guarded-sub-sub-fold/: NOTES.md  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m032-cnot-neg-ugt-fold/: reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m033-not-xor-branch-fold/: NOTES.md  reduced.ptx
ptx/known-miscompiles/m034-bfind-zero-branch-fold/: reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m035-xor-not-predicate-fold/: reduced.ptx
ptx/known-miscompiles/m036-mulhi-control-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m037-bmsk-clz-bfi-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m038-structured-empty-else-fold/: NOTES.md
ptx/known-miscompiles/m039-else-redefinition-fold/: repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m041-or-shifted-square-fold/: repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m042-vsub4-else-ifconvert-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m043-shr-sub-branch-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m044-mul-lo-square-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m045-brev-branch-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m046-cnot-underflow-ugt-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m047-selp-ge-zero-branch-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m048-intmax-popc-sub-mask-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m049-wide-or-shift-mask-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m050-reg-shl-mask-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m051-sat-sub-add-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m052-bfe-reg-pos-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m053-bfi-reg-len-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m054-packed-add-cvt-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m055-prmt-reg-control-eq-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m056-packed-add-cvt-s16-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m057-s16-unary-intmin-fold/: NOTES.md  reduced.ptx  reduced_neg.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m058-scalar16-min-cvt-fold/: NOTES.md  reduced.ptx  reduced_u16.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m059-scalar16-pred-mulwide-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m060-scalar16-sub-intmin-fold/: NOTES.md  reduced.ptx  repro_nvcc_inline_ptx.cu
ptx/known-miscompiles/m061-f32-div-pred-neg-cvt-fold/: NOTES.md  reduced.ptx
ptx/known-miscompiles/m062-packed-max-u16x2-liveout-fold/: NOTES.md  reduced.ptx
ptx/known-miscompiles/m063-f32-approx-div-cvt-boundary/: NOTES.md  reduced.ptx
ptx/known-miscompiles/m064-scalar16-max-cvt-predicate-fold/: NOTES.md  reduced.ptx
ptx/known-miscompiles/m083-orphan-param-ld/: NOTES.md  (+2 more)
ptx/scripts/: check-gen.sh
spirv/fuzzer/: CMakeLists.txt  llvm_spirv_crash_fuzzer.cpp
(+1538 files in other folders)
