[workspace]
resolver = "2"
members = [
    "crates/ptx-fuzz-gen",
    "crates/ptx-fuzz-mutator",
    "crates/ptx-fuzz-repro",
    "crates/fake-ptxas",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[workspace.dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
