[workspace]
resolver = "2"
members = [
    "crates/fuzzx-exec",
    "crates/fuzzx-execgen",
    "crates/fuzzx-diff",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[profile.release]
panic = "abort"
